Fix typo debian/control

--- a/debian/control
+++ b/debian/control
@@ -4,15 +4,19 @@ Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>,
            Prach Pongpanich <prachpub@gmail.com>
-Build-Depends: debhelper (>= 9), openstack-pkg-tools, python-all (>= 2.6.6-3~)
-Build-Depends-Indep: python-argparse,
-                     python-httplib2,
-                     python-iso8601,
-                     python-keystoneclient (>= 1:0.2),
-                     python-prettytable (<< 0.8),
-                     python-prettytable (>= 0.5),
-                     python-setuptools (>= 0.6.24),
-                     python-setuptools-git
+Build-Depends: 
+ debhelper (>= 9),
+ openstack-pkg-tools,
+ python-all (>= 2.6.6-3~)
+Build-Depends-Indep: 
+ python-argparse,
+ python-httplib2,
+ python-iso8601,
+ python-keystoneclient (>= 1:0.2),
+ python-prettytable (<< 0.8),
+ python-prettytable (>= 0.5),
+ python-setuptools (>= 0.6.24),
+ python-setuptools-git
 Standards-Version: 3.9.4
 Homepage: https://github.com/openstack/python-heatclient
 Vcs-Git: git://git.debian.org/openstack/python-heatclient.git
@@ -21,18 +25,19 @@ Vcs-Browser: http://git.debian.org/?p=openstack/python-heatclient.git
 Package: python-heatclient
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python-argparse,
-         python-httplib2,
-         python-iso8601,
-         python-keystoneclient (>= 1:0.2),
-         python-prettytable (<< 0.8),
-         python-prettytable (>= 0.5),
-         ${misc:Depends},
-         ${python:Depends}
+Depends: 
+ python-argparse,
+ python-httplib2,
+ python-iso8601,
+ python-keystoneclient (>= 1:0.2),
+ python-prettytable (<< 0.8),
+ python-prettytable (>= 0.5),
+ ${misc:Depends},
+ ${python:Depends}
 Provides: ${python:Provides}
 Description: client library and CLI for OpenStack Heat
- Heat is a service to orchestrate multiple composite cloud applications 
- using templates, through both an OpenStack-native ReST API and 
+ Heat is a service to orchestrate multiple composite cloud applications
+ using templates, through both an OpenStack-native ReST API and
  a CloudFormation-compatible Query API.
  .
  This is a client for the OpenStack Heat API. There's a Python API (the
