Update run tests script

--- a/debian/rules
+++ b/debian/rules
@@ -22,5 +22,7 @@ override_dh_install:
 
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	set -e ; for pyversion in $(shell pyversions -vr); do nosetests-$$pyversion -v; done
+	set -e; for pyversion in $(shell pyversions -r); do \
+		$$pyversion /usr/bin/nosetests -v; \
+	done
 endif
