--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,9 @@ Section: python
 Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>,
-           Prach Pongpanich <prachpub@gmail.com>
+           Prach Pongpanich <prachpub@gmail.com>,
+           Julien Danjou <acid@debian.org>,
+           Ghe Rivero <ghe.rivero@stackops.com>
 Build-Depends: 
  debhelper (>= 9),
  python-all (>= 2.6.6-3~)
