--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,6 @@ Uploaders: Thomas Goirand <zigo@debian.org>,
            Ghe Rivero <ghe.rivero@stackops.com>
 Build-Depends: debhelper (>= 9), python-all (>= 2.6.6-3~)
 Build-Depends-Indep: openstack-pkg-tools,
-                     python-argparse (>= 1.2),
                      python-httplib2,
                      python-iso8601,
                      python-keystoneclient (>= 1:0.2),
@@ -26,7 +25,7 @@ Vcs-Browser: http://git.debian.org/?p=openstack/python-heatclient.git
 Package: python-heatclient
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python (>= 2.7) | python-argparse,
+Depends: python (>= 2.7),
          python-httplib2,
          python-iso8601,
          python-keystoneclient (>= 1:0.2),
