--- a/debian/rules
+++ b/debian/rules
@@ -26,3 +26,10 @@ ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 		$$pyversion /usr/bin/nosetests -v; \
 	done
 endif
+
+override_dh_gencontrol:
+	if [ `lsb_release -a | grep Release | awk '{print $2}'` = "7.0" ] ; then \
+		dh_gencontrol -- -T$(CURDIR)/debian/wheezy_deps ; \
+	else \
+		dh_gencontrol ; \
+	fi
