--- a/debian/rules
+++ b/debian/rules
@@ -23,7 +23,7 @@ override_dh_install:
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 	set -e; for pyversion in $(shell pyversions -r); do \
-		if [ `lsb_release -a | grep Release | awk '{print $2}'` = "7.0" ] ; then \
+		if [ `lsb_release -a | grep Release | awk '{print $$2}'` = "7.0" ] ; then \
 			$$pyversion /usr/bin/nosetests -v || true ; \
 		else \
 			$$pyversion /usr/bin/nosetests -v; \
@@ -32,7 +32,7 @@ ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 endif
 
 override_dh_gencontrol:
-	if [ `lsb_release -a | grep Release | awk '{print $2}'` = "7.0" ] ; then \
+	if [ `lsb_release -a | grep Release | awk '{print $$2}'` = "7.0" ] ; then \
 		dh_gencontrol -- -T$(CURDIR)/debian/wheezy_deps ; \
 	else \
 		dh_gencontrol ; \
