Added build-depends: python-testtools and (build-)depends python-yaml

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,9 @@ Build-Depends-Indep: lsb-release,
                      python-prettytable (<< 0.8),
                      python-prettytable (>= 0.5),
                      python-setuptools (>= 0.6.24),
-                     python-setuptools-git
+                     python-setuptools-git,
+                     python-testtools,
+                     python-yaml
 Standards-Version: 3.9.4
 Homepage: https://github.com/openstack/python-heatclient
 Vcs-Git: git://git.debian.org/openstack/python-heatclient.git
@@ -33,6 +35,7 @@ Depends: python (>= 2.7),
          python-pkg-resources,
          python-prettytable (<< 0.8),
          python-prettytable (>= 0.5),
+         python-yaml,
          ${misc:Depends},
          ${python:Depends},
          ${wheezy-added-deps}
