--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends-Indep: lsb-release,
                      python-httplib2,
                      python-iso8601,
                      python-keystoneclient (>= 1:0.2),
+                     python-mimeparse (>= 0.1.4),
                      python-mox,
                      python-nose,
                      python-prettytable (<< 0.8),
