--- a/debian/rules
+++ b/debian/rules
@@ -24,7 +24,7 @@ override_dh_install:
 
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	python setup.py testr --slowest
+	python setup.py testr --slowest --testr-args='--subunit  '
 endif
 
 override_dh_gencontrol:
