--- a/debian/control
+++ b/debian/control
@@ -28,8 +28,8 @@ Build-Depends-Indep: lsb-release,
                      python-yaml,
                      testrepository (>= 0.0.14)
 Standards-Version: 3.9.4
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-heatclient.git
-Vcs-Git: git://anonscm.debian.org/openstack/python-heatclient.git
+Vcs-Browser: http://git.gplhost.com/gitweb/?p=openstack/python-heatclient.git
+Vcs-Git: http://git.gplhost.com/openstack/python-heatclient.git
 Homepage: https://github.com/openstack/python-heatclient
 
 Package: python-heatclient
