--- a/debian/rules
+++ b/debian/rules
@@ -24,7 +24,11 @@ override_dh_install:
 
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	python setup.py testr --slowest --testr-args='--subunit  '
+	set -e && \
+		TEMP_REZ=`mktemp -t` && \
+		python setup.py testr --slowest --testr-args='--subunit  ' | tee $$TEMP_REZ | subunit2pyunit && \
+		cat $$TEMP_REZ | subunit-filter -s --no-passthrough | subunit-stats && \
+		rm -f $$TEMP_REZ
 endif
 
 override_dh_gencontrol:
