--- a/debian/control
+++ b/debian/control
@@ -12,20 +12,21 @@ Build-Depends: debhelper (>= 9),
                python-setuptools,
                python-pbr (>= 6)
 Build-Depends-Indep: lsb-release,
-                     python-fixtures,
-                     python-iso8601,
-                     python-keystoneclient (>= 1:0.2),
+                     python-coverage (>= 3.6),
+                     python-fixtures (>= 0.3.14),
+                     python-hacking (>= 0.8.0),
+                     python-iso8601 (>= 0.1.9),
+                     python-keystoneclient (>= 1:0.6.0),
                      python-mimeparse (>= 0.1.4),
-                     python-mock (>= 0.8.0),
-                     python-mox,
-                     python-prettytable (<< 0.8),
-                     python-prettytable (>= 0.5),
-                     python-setuptools (>= 0.6.24),
-                     python-setuptools-git,
-                     python-testscenarios,
-                     python-testtools,
+                     python-mock (>= 1.0),
+                     python-mox3,
+                     python-prettytable (>= 0.7),
+                     python-requests (>= 1.1),
+                     python-six (>= 1.4.1),
+                     python-testscenarios (>= 0.4),
+                     python-testtools (>= 0.9.34),
                      python-yaml,
-                     testrepository (>= 0.0.14)
+                     testrepository (>= 0.0.18)
 Standards-Version: 3.9.4
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-heatclient.git
 Vcs-Git: git://anonscm.debian.org/openstack/python-heatclient.git
@@ -34,12 +35,14 @@ Homepage: https://github.com/openstack/python-heatclient
 Package: python-heatclient
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python-iso8601,
-         python-keystoneclient (>= 1:0.2),
+Depends: python-iso8601 (>= 0.1.9),
+         python-keystoneclient (>= 1:0.6.0),
          python-pbr (>= 0.6),
          python-pkg-resources,
          python-prettytable (<< 0.8),
          python-prettytable (>= 0.5),
+         python-requests (>= 1.1),
+         python-six (>= 1.4.1),
          python-yaml,
          ${misc:Depends},
          ${python:Depends},
