--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ override_dh_auto_configure:
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -f heatclient/versioninfo
-	rm -rf setuptools_git-*-py*.egg/
+	rm -rf .testrepository
 
 override_dh_install:
 	dh_install
@@ -24,11 +24,14 @@ override_dh_install:
 
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+	rm -rf .testrepository
+	testr init
 	set -e && \
 		TEMP_REZ=`mktemp -t` && \
-		python setup.py testr --slowest --testr-args='--subunit  ' | tee $$TEMP_REZ | subunit2pyunit && \
+		PYTHONPATH=$(CURDIR) testr run --subunit | tee $$TEMP_REZ | subunit2pyunit && \
 		cat $$TEMP_REZ | subunit-filter -s --no-passthrough | subunit-stats && \
-		rm -f $$TEMP_REZ
+		rm -f $$TEMP_REZ ;
+	testr slowest
 endif
 
 override_dh_gencontrol:
