--- a/debian/control
+++ b/debian/control
@@ -4,27 +4,34 @@ Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>,
            Prach Pongpanich <prachpub@gmail.com>,
-           Julien Danjou <acid@debian.org>,
-           Ghe Rivero <ghe.rivero@stackops.com>
 Build-Depends: debhelper (>= 9),
+               dh-python,
                openstack-pkg-tools,
                python-all (>= 2.6.6-3~),
                python-pbr (>= 0.6),
-               python-setuptools
+               python-setuptools,
+               python-sphinx
 Build-Depends-Indep: lsb-release,
+                     python-babel (>= 1.3),
                      python-coverage (>= 3.6),
                      python-fixtures (>= 0.3.14),
-                     python-hacking (>= 0.8.0),
+                     python-hacking,
                      python-iso8601 (>= 0.1.9),
-                     python-keystoneclient (>= 1:0.7.0),
+                     python-keystoneclient (>= 1:1.0.0),
                      python-mimeparse (>= 0.1.4),
                      python-mock (>= 1.0),
                      python-mox3,
+                     python-oslo.i18n (>= 1.3.0),
+                     python-oslo.serialization (>= 1.2.0),
+                     python-oslo.utils (>= 1.2.0),
+                     python-oslosphinx (>= 2.2.0.0),
+                     python-oslotest (>= 1.2.0),
                      python-prettytable (>= 0.7),
-                     python-requests (>= 1.1),
-                     python-six (>= 1.5.2),
+                     python-requests (>= 2.2.0),
+                     python-requests-mock (>= 0.5.1),
+                     python-six (>= 1.7.0),
                      python-testscenarios (>= 0.4),
-                     python-testtools (>= 0.9.34),
+                     python-testtools (>= 0.9.36),
                      python-yaml,
                      subunit (>= 0.0.18),
                      testrepository (>= 0.0.18)
@@ -36,14 +43,18 @@ Homepage: https://github.com/openstack/python-heatclient
 Package: python-heatclient
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python-iso8601 (>= 0.1.9),
-         python-keystoneclient (>= 1:0.7.0),
+Depends: python-babel (>= 1.3),
+         python-iso8601 (>= 0.1.9),
+         python-keystoneclient (>= 1:1.0.0),
+         python-oslo.i18n (>= 1.3.0),
+         python-oslo.serialization (>= 1.2.0),
+         python-oslo.utils (>= 1.2.0),
          python-pbr (>= 0.6),
          python-pkg-resources,
          python-prettytable (<< 0.8),
          python-prettytable (>= 0.5),
-         python-requests (>= 1.1),
-         python-six (>= 1.5.2),
+         python-requests (>= 2.2.0),
+         python-six (>= 1.7.0),
          python-yaml,
          ${misc:Depends},
          ${python:Depends},
