--- a/debian/control
+++ b/debian/control
@@ -6,35 +6,35 @@ Uploaders: Thomas Goirand <zigo@debian.org>,
            Prach Pongpanich <prachpub@gmail.com>,
 Build-Depends: debhelper (>= 9),
                dh-python,
-               openstack-pkg-tools,
+               openstack-pkg-tools (>= 23~),
                python-all (>= 2.6.6-3~),
-               python-pbr (>= 0.6),
+               python-pbr,
                python-setuptools,
-               python-sphinx
+               python-sphinx,
 Build-Depends-Indep: lsb-release,
-                     python-babel (>= 1.3),
-                     python-coverage (>= 3.6),
-                     python-fixtures (>= 0.3.14),
+                     python-babel,
+                     python-coverage,
+                     python-fixtures,
                      python-hacking,
-                     python-iso8601 (>= 0.1.9),
-                     python-keystoneclient (>= 1:1.0.0),
-                     python-mimeparse (>= 0.1.4),
-                     python-mock (>= 1.0),
+                     python-iso8601,
+                     python-keystoneclient (>= 1:1.1.0),
+                     python-mock,
                      python-mox3,
-                     python-oslo.i18n (>= 1.3.0),
-                     python-oslo.serialization (>= 1.2.0),
-                     python-oslo.utils (>= 1.2.0),
-                     python-oslosphinx (>= 2.2.0.0),
-                     python-oslotest (>= 1.2.0),
-                     python-prettytable (>= 0.7),
-                     python-requests (>= 2.2.0),
-                     python-requests-mock (>= 0.5.1),
-                     python-six (>= 1.7.0),
-                     python-testscenarios (>= 0.4),
-                     python-testtools (>= 0.9.36),
+                     python-oslo.i18n (>= 1.5.0),
+                     python-oslo.serialization (>= 1.4.0),
+                     python-oslo.utils (>= 1.4.0),
+                     python-oslosphinx (>= 2.5.0),
+                     python-oslotest (>= 1.5.1),
+                     python-prettytable,
+                     python-requests,
+                     python-requests-mock (>= 0.6.0),
+                     python-six (>= 1.9.0),
+                     python-swiftclient,
+                     python-testscenarios,
+                     python-testtools,
                      python-yaml,
-                     subunit (>= 0.0.18),
-                     testrepository (>= 0.0.18)
+                     subunit,
+                     testrepository,
 Standards-Version: 3.9.4
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-heatclient.git
 Vcs-Git: git://anonscm.debian.org/openstack/python-heatclient.git
@@ -43,22 +43,20 @@ Homepage: https://github.com/openstack/python-heatclient
 Package: python-heatclient
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python-babel (>= 1.3),
-         python-iso8601 (>= 0.1.9),
-         python-keystoneclient (>= 1:1.0.0),
-         python-oslo.i18n (>= 1.3.0),
-         python-oslo.serialization (>= 1.2.0),
-         python-oslo.utils (>= 1.2.0),
-         python-pbr (>= 0.6),
-         python-pkg-resources,
-         python-prettytable (<< 0.8),
-         python-prettytable (>= 0.5),
-         python-requests (>= 2.2.0),
-         python-six (>= 1.7.0),
+Depends: python-babel,
+         python-iso8601,
+         python-keystoneclient (>= 1:1.1.0),
+         python-oslo.i18n (>= 1.5.0),
+         python-oslo.serialization (>= 1.4.0),
+         python-oslo.utils (>= 1.4.0),
+         python-pbr,
+         python-prettytable,
+         python-requests,
+         python-six (>= 1.9.0),
+         python-swiftclient,
          python-yaml,
          ${misc:Depends},
          ${python:Depends},
-         ${wheezy-added-deps}
 Description: client library and CLI for OpenStack Heat
  Heat is a service to orchestrate multiple composite cloud applications
  using templates, through both an OpenStack-native ReST API and
