--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Thomas Goirand <zigo@debian.org>,
            Prach Pongpanich <prachpub@gmail.com>,
 Build-Depends: debhelper (>= 9),
                dh-python,
-               openstack-pkg-tools (>= 23~),
-               python-all (>= 2.6.6-3~),
+               openstack-pkg-tools,
+               python-all,
                python-pbr,
                python-setuptools,
                python-sphinx,
