--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                openstack-pkg-tools,
                python-all,
-               python-pbr,
+               python-pbr (>= 0.11),
                python-setuptools,
                python-sphinx,
 Build-Depends-Indep: lsb-release,
@@ -17,7 +17,7 @@ Build-Depends-Indep: lsb-release,
                      python-fixtures,
                      python-hacking,
                      python-iso8601,
-                     python-keystoneclient (>= 1:1.1.0),
+                     python-keystoneclient (>= 1:1.3.0),
                      python-mock,
                      python-mox3,
                      python-oslo.i18n (>= 1.5.0),
@@ -26,7 +26,7 @@ Build-Depends-Indep: lsb-release,
                      python-oslosphinx (>= 2.5.0),
                      python-oslotest (>= 1.5.1),
                      python-prettytable,
-                     python-requests,
+                     python-requests (>= 2.5.2),
                      python-requests-mock (>= 0.6.0),
                      python-six (>= 1.9.0),
                      python-swiftclient,
@@ -45,13 +45,13 @@ Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
 Depends: python-babel,
          python-iso8601,
-         python-keystoneclient (>= 1:1.1.0),
+         python-keystoneclient (>= 1:1.3.0),
          python-oslo.i18n (>= 1.5.0),
          python-oslo.serialization (>= 1.4.0),
          python-oslo.utils (>= 1.4.0),
-         python-pbr,
+         python-pbr (>= 0.11),
          python-prettytable,
-         python-requests,
+         python-requests (>= 2.5.2),
          python-six (>= 1.9.0),
          python-swiftclient,
          python-yaml,
