--- a/debian/control
+++ b/debian/control
@@ -8,53 +8,55 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                openstack-pkg-tools,
                python-all,
-               python-pbr (>= 0.11),
+               python-pbr (>= 1.6),
                python-setuptools,
                python-sphinx,
                python3-all,
-               python3-pbr (>= 0.11),
+               python3-pbr (>= 1.6),
                python3-setuptools,
 Build-Depends-Indep: lsb-release,
                      python-babel,
                      python-coverage,
-                     python-fixtures,
-                     python-hacking,
+                     python-fixtures (>= 1.3.1),
+                     python-hacking (>= 0.10.0),
                      python-iso8601,
-                     python-keystoneclient (>= 1:1.3.0),
-                     python-mock,
+                     python-keystoneclient (>= 1:1.6.0),
+                     python-mock (>= 1.2),
                      python-mox3,
                      python-oslo.i18n (>= 1.5.0),
                      python-oslo.serialization (>= 1.4.0),
-                     python-oslo.utils (>= 1.4.0),
+                     python-oslo.utils (>= 2.0.0),
                      python-oslosphinx (>= 2.5.0),
-                     python-oslotest (>= 1.5.1),
+                     python-oslotest (>= 1.10.0),
                      python-prettytable,
                      python-requests (>= 2.5.2),
                      python-requests-mock (>= 0.6.0),
                      python-six (>= 1.9.0),
                      python-swiftclient,
+                     python-tempest-lib,
                      python-testscenarios,
-                     python-testtools,
+                     python-testtools (>= 1.4.0),
                      python-yaml,
                      python3-babel,
-                     python3-fixtures,
-                     python3-hacking,
+                     python3-fixtures (>= 1.3.1),
+                     python3-hacking (>= 0.10.0),
                      python3-iso8601,
-                     python3-keystoneclient (>= 1:1.3.0),
-                     python3-mock,
+                     python3-keystoneclient (>= 1:1.6.0),
+                     python3-mock (>= 1.2),
                      python3-mox3,
                      python3-oslo.i18n (>= 1.5.0),
                      python3-oslo.serialization (>= 1.4.0),
-                     python3-oslo.utils (>= 1.4.0),
-                     python3-oslotest (>= 1.5.1),
+                     python3-oslo.utils (>= 2.0.0),
+                     python3-oslotest (>= 1.10.0),
                      python3-prettytable,
                      python3-requests (>= 2.5.2),
                      python3-requests-mock (>= 0.6.0),
                      python3-six (>= 1.9.0),
                      python3-subunit,
                      python3-swiftclient,
+                     python3-tempest-lib,
                      python3-testscenarios,
-                     python3-testtools,
+                     python3-testtools (>= 1.4.0),
                      python3-yaml,
                      subunit,
                      testrepository,
@@ -67,11 +69,11 @@ Package: python-heatclient
 Architecture: all
 Depends: python-babel,
          python-iso8601,
-         python-keystoneclient (>= 1:1.3.0),
+         python-keystoneclient (>= 1:1.6.0),
          python-oslo.i18n (>= 1.5.0),
          python-oslo.serialization (>= 1.4.0),
-         python-oslo.utils (>= 1.4.0),
-         python-pbr,
+         python-oslo.utils (>= 2.0.0),
+         python-pbr (>= 1.6),
          python-prettytable,
          python-requests (>= 2.5.2),
          python-six (>= 1.9.0),
@@ -94,11 +96,11 @@ Package: python3-heatclient
 Architecture: all
 Depends: python3-babel,
          python3-iso8601,
-         python3-keystoneclient (>= 1:1.3.0),
+         python3-keystoneclient (>= 1:1.6.0),
          python3-oslo.i18n (>= 1.5.0),
          python3-oslo.serialization (>= 1.4.0),
-         python3-oslo.utils (>= 1.4.0),
-         python3-pbr,
+         python3-oslo.utils (>= 2.0.0),
+         python3-pbr (>= 1.6),
          python3-prettytable,
          python3-requests (>= 2.5.2),
          python3-six (>= 1.9.0),
