--- a/debian/rules
+++ b/debian/rules
@@ -22,6 +22,8 @@ override_dh_auto_install:
 	mv $(CURDIR)/debian/python3-heatclient/usr/bin/heat $(CURDIR)/debian/python3-heatclient/usr/bin/python3-heat
 	rm -f $(CURDIR)/debian/python*/usr/lib/python*/dist-packages/*.pth
 
+override_dh_python3:
+	dh_python3 --shebang=/usr/bin/python3
 
 override_dh_auto_clean:
 	dh_auto_clean
