--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends: debhelper (>= 9),
                python3-setuptools,
 Build-Depends-Indep: lsb-release,
                      python-babel,
+                     python-cliff (>= 1.15.0),
                      python-coverage,
                      python-fixtures (>= 1.3.1),
                      python-hacking (>= 0.10.0),
@@ -24,14 +25,15 @@ Build-Depends-Indep: lsb-release,
                      python-keystoneclient (>= 1:1.6.0),
                      python-mock (>= 1.2),
                      python-mox3,
+                     python-openstackclient (>= 2.0.0),
                      python-oslo.i18n (>= 1.5.0),
-                     python-oslo.serialization (>= 1.4.0),
-                     python-oslo.utils (>= 2.0.0),
+                     python-oslo.serialization (>= 1.10.0),
+                     python-oslo.utils (>= 3.2.0),
                      python-oslosphinx (>= 2.5.0),
                      python-oslotest (>= 1.10.0),
                      python-prettytable,
-                     python-requests (>= 2.5.2),
-                     python-requests-mock (>= 0.6.0),
+                     python-requests (>= 2.8.1),
+                     python-requests-mock (>= 0.7.0),
                      python-six (>= 1.9.0),
                      python-swiftclient,
                      python-tempest-lib,
@@ -39,19 +41,21 @@ Build-Depends-Indep: lsb-release,
                      python-testtools (>= 1.4.0),
                      python-yaml,
                      python3-babel,
+                     python3-cliff (>= 1.15.0),
                      python3-fixtures (>= 1.3.1),
                      python3-hacking (>= 0.10.0),
                      python3-iso8601,
                      python3-keystoneclient (>= 1:1.6.0),
                      python3-mock (>= 1.2),
                      python3-mox3,
+                     python3-openstackclient (>= 2.0.0),
                      python3-oslo.i18n (>= 1.5.0),
                      python3-oslo.serialization (>= 1.4.0),
-                     python3-oslo.utils (>= 2.0.0),
+                     python3-oslo.utils (>= 3.2.0),
                      python3-oslotest (>= 1.10.0),
                      python3-prettytable,
-                     python3-requests (>= 2.5.2),
-                     python3-requests-mock (>= 0.6.0),
+                     python3-requests (>= 2.8.1),
+                     python3-requests-mock (>= 0.7.0),
                      python3-six (>= 1.9.0),
                      python3-subunit,
                      python3-swiftclient,
@@ -69,14 +73,16 @@ Homepage: https://github.com/openstack/python-heatclient
 Package: python-heatclient
 Architecture: all
 Depends: python-babel,
+         python-cliff (>= 1.15.0),
          python-iso8601,
          python-keystoneclient (>= 1:1.6.0),
+         python-openstackclient (>= 2.0.0),
          python-oslo.i18n (>= 1.5.0),
-         python-oslo.serialization (>= 1.4.0),
-         python-oslo.utils (>= 2.0.0),
+         python-oslo.serialization (>= 1.10.0),
+         python-oslo.utils (>= 3.2.0),
          python-pbr (>= 1.6),
          python-prettytable,
-         python-requests (>= 2.5.2),
+         python-requests (>= 2.8.1),
          python-six (>= 1.9.0),
          python-swiftclient,
          python-yaml,
@@ -96,14 +102,16 @@ Description: client library and CLI for OpenStack Heat - Python 2.7
 Package: python3-heatclient
 Architecture: all
 Depends: python3-babel,
+         python3-cliff (>= 1.15.0),
          python3-iso8601,
          python3-keystoneclient (>= 1:1.6.0),
+         python3-openstackclient (>= 2.0.0),
          python3-oslo.i18n (>= 1.5.0),
-         python3-oslo.serialization (>= 1.4.0),
-         python3-oslo.utils (>= 2.0.0),
+         python3-oslo.serialization (>= 1.10.0),
+         python3-oslo.utils (>= 3.2.0),
          python3-pbr (>= 1.6),
          python3-prettytable,
-         python3-requests (>= 2.5.2),
+         python3-requests (>= 2.8.1),
          python3-six (>= 1.9.0),
          python3-swiftclient,
          python3-yaml,
