--- a/debian/control
+++ b/debian/control
@@ -9,11 +9,11 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                openstack-pkg-tools,
                python-all,
-               python-pbr (>= 1.6),
+               python-pbr (>= 1.8),
                python-setuptools,
                python-sphinx,
                python3-all,
-               python3-pbr (>= 1.6),
+               python3-pbr (>= 1.8),
                python3-setuptools,
 Build-Depends-Indep: lsb-release,
                      python-babel,
@@ -25,10 +25,10 @@ Build-Depends-Indep: lsb-release,
                      python-keystoneclient (>= 1:1.6.0),
                      python-mock (>= 1.2),
                      python-mox3,
-                     python-openstackclient (>= 2.0.0),
-                     python-oslo.i18n (>= 1.5.0),
+                     python-openstackclient (>= 2.1.0),
+                     python-oslo.i18n (>= 2.1.0),
                      python-oslo.serialization (>= 1.10.0),
-                     python-oslo.utils (>= 3.2.0),
+                     python-oslo.utils (>= 3.5.0),
                      python-oslosphinx (>= 2.5.0),
                      python-oslotest (>= 1.10.0),
                      python-prettytable,
@@ -36,7 +36,7 @@ Build-Depends-Indep: lsb-release,
                      python-requests-mock (>= 0.7.0),
                      python-six (>= 1.9.0),
                      python-swiftclient,
-                     python-tempest-lib,
+                     python-tempest-lib (>= 0.14.0),
                      python-testscenarios,
                      python-testtools (>= 1.4.0),
                      python-yaml,
@@ -48,10 +48,10 @@ Build-Depends-Indep: lsb-release,
                      python3-keystoneclient (>= 1:1.6.0),
                      python3-mock (>= 1.2),
                      python3-mox3,
-                     python3-openstackclient (>= 2.0.0),
-                     python3-oslo.i18n (>= 1.5.0),
+                     python3-openstackclient (>= 2.1.0),
+                     python3-oslo.i18n (>= 2.1.0),
                      python3-oslo.serialization (>= 1.10.0),
-                     python3-oslo.utils (>= 3.2.0),
+                     python3-oslo.utils (>= 3.5.0),
                      python3-oslotest (>= 1.10.0),
                      python3-prettytable,
                      python3-requests (>= 2.8.1),
@@ -59,7 +59,7 @@ Build-Depends-Indep: lsb-release,
                      python3-six (>= 1.9.0),
                      python3-subunit,
                      python3-swiftclient,
-                     python3-tempest-lib,
+                     python3-tempest-lib (>= 0.14.0),
                      python3-testscenarios,
                      python3-testtools (>= 1.4.0),
                      python3-yaml,
@@ -76,11 +76,11 @@ Depends: python-babel,
          python-cliff (>= 1.15.0),
          python-iso8601,
          python-keystoneclient (>= 1:1.6.0),
-         python-openstackclient (>= 2.0.0),
-         python-oslo.i18n (>= 1.5.0),
+         python-openstackclient (>= 2.1.0),
+         python-oslo.i18n (>= 2.1.0),
          python-oslo.serialization (>= 1.10.0),
-         python-oslo.utils (>= 3.2.0),
-         python-pbr (>= 1.6),
+         python-oslo.utils (>= 3.5.0),
+         python-pbr (>= 1.8),
          python-prettytable,
          python-requests (>= 2.8.1),
          python-six (>= 1.9.0),
@@ -105,11 +105,11 @@ Depends: python3-babel,
          python3-cliff (>= 1.15.0),
          python3-iso8601,
          python3-keystoneclient (>= 1:1.6.0),
-         python3-openstackclient (>= 2.0.0),
-         python3-oslo.i18n (>= 1.5.0),
+         python3-openstackclient (>= 2.1.0),
+         python3-oslo.i18n (>= 2.1.0),
          python3-oslo.serialization (>= 1.10.0),
-         python3-oslo.utils (>= 3.2.0),
-         python3-pbr (>= 1.6),
+         python3-oslo.utils (>= 3.5.0),
+         python3-pbr (>= 1.8),
          python3-prettytable,
          python3-requests (>= 2.8.1),
          python3-six (>= 1.9.0),
